# Web-Crawler

web-crawler/: Cargo.toml
web-crawler/src/: cli.rs  content.rs  main.rs  url_processing.rs  web_parsing.rs
